# stockterm

./: Cargo.toml  README.md
docs/: QA_PLAN.md  ROADMAP.md  SCRATCHPAD.md  SPEC.md
src/: lib.rs  logging.rs  main.rs
src/api/: concurrency.rs  error.rs  historical_query.rs  http.rs  http_fetch.rs  mod.rs  polygon.rs  provider.rs  retry.rs  yahoo.rs
src/app/: alerts.rs  app.rs  app_error.rs  charts.rs  event.rs  fetch_delivery.rs  handlers.rs  keyboard.rs  layout.rs  mod.rs  open_url.rs  portfolio.rs  styles.rs  table_filter.rs  ui.rs
src/config/: config.rs  keymap.rs  layout.rs  mod.rs  theme.rs
src/models/: alerts.rs  historical.rs  mod.rs  news.rs  portfolio.rs  search.rs  ticker.rs  time_range.rs
tests/fixtures/: yahoo_chart_aapl.json  yahoo_news_query2_drift.json  yahoo_news_query2_stream.json  yahoo_search_apple.json
