[package]
name = "stockterm"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop-notify"]
desktop-notify = ["dep:notify-rust"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.25.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "6.0.0"
chrono = "0.4.40"
thiserror = "2"
urlencoding = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
notify-rust = { version = "4.11", optional = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"